--- a/main.bib
+++ b/main.bib
@@ -3399,11 +3399,11 @@
   volume       = 3,
   number       = 11
 }
- @article{Lades_Vorbruggen_Buhmann_Lange_vonderMalsburg_Wurtz_Konen_1993, title={Distortion invariant object recognition in the dynamic link architecture}, volume={42}, ISSN={00189340}, DOI={10.1109/12.210173}, number={3}, journal={IEEE Transactions on Computers}, author={Lades, M. and Vorbruggen, J.C. and Buhmann, J. and Lange, J. and von der Malsburg, C. and Wurtz, R.P. and Konen, W.}, year={1993}, month={Mar}, pages={300–311} }
+ @article{Lades_Vorbruggen_Buhmann_Lange_vonderMalsburg_Wurtz_Konen_1993, title={Distortion Invariant Object Recognition in the Dynamic Link Architecture}, volume={42}, ISSN={00189340}, DOI={10.1109/12.210173}, number={3}, journal={IEEE Transactions on Computers}, author={Lades, M. and Vorbruggen, J.C. and Buhmann, J. and Lange, J. and {von der Malsburg}, C. and Wurtz, R.P. and Konen, W.}, year={1993}, month={Mar}, pages={300–311} }
 
  @article{Bienenstock_vonderMalsburg_1987, title={A Neural Network for Invariant Pattern Recognition}, volume={4}, ISSN={0295-5075, 1286-4854}, DOI={10.1209/0295-5075/4/1/020}, number={1}, journal={Europhysics Letters (EPL)}, author={Bienenstock, Elie and {von der Malsburg}, Christoph}, year={1987}, month={Jul}, pages={121–126} }
 
- @inbook{Mohebali_Tahmassebi_Meyer_Baese_Gandomi_2020, title={Probabilistic neural networks}, ISBN={978-0-12-816514-0}, url={https://linkinghub.elsevier.com/retrieve/pii/B978012816514000014X}, DOI={10.1016/B978-0-12-816514-0.00014-X}, booktitle={Handbook of Probabilistic Models}, publisher={Elsevier}, author={Mohebali, Behshad and Tahmassebi, Amirhessam and Meyer-Baese, Anke and Gandomi, Amir H.}, year={2020}, pages={347–367}, language={en} }
+ @inbook{Mohebali_Tahmassebi_Meyer_Baese_Gandomi_2020, title={Probabilistic Neural Networks}, ISBN={978-0-12-816514-0}, url={https://linkinghub.elsevier.com/retrieve/pii/B978012816514000014X}, DOI={10.1016/B978-0-12-816514-0.00014-X}, booktitle={Handbook of Probabilistic Models}, publisher={Elsevier}, author={Mohebali, Behshad and Tahmassebi, Amirhessam and Meyer-Baese, Anke and Gandomi, Amir H.}, year={2020}, pages={347–367}, language={en} }
 
  @article{Specht_1967, title={Generation of Polynomial Discriminant Functions for Pattern Recognition}, volume={EC-16}, ISSN={0367-7508}, DOI={10.1109/PGEC.1967.264667}, number={3}, journal={IEEE Transactions on Electronic Computers}, author={Specht, Donald F.}, year={1967}, month={Jun}, pages={308–319} }
 
@@ -3424,7 +3424,7 @@
 
  @article{Akhtar_Mian_2018, title={Threat of Adversarial Attacks on Deep Learning in Computer Vision: A Survey}, volume={6}, ISSN={2169-3536}, DOI={10.1109/ACCESS.2018.2807385}, journal={IEEE Access}, author={Akhtar, Naveed and Mian, Ajmal}, year={2018}, pages={14410–14430} }
 
- @article{Gabor_1946, title={Theory of communication. Part 1: The Analysis of Information}, volume={93}, ISSN={2054-0604}, DOI={10.1049/ji-3-2.1946.0074}, number={26}, journal={Journal of the Institution of Electrical Engineers - Part III: Radio and Communication Engineering}, author={Gabor, D.}, year={1946}, month={Nov}, pages={429–441}, language={en} }
+ @article{Gabor_1946, title={Theory of Communication. Part 1: The Analysis of Information}, volume={93}, ISSN={2054-0604}, DOI={10.1049/ji-3-2.1946.0074}, number={26}, journal={Journal of the Institution of Electrical Engineers - Part III: Radio and Communication Engineering}, author={Gabor, D.}, year={1946}, month={Nov}, pages={429–441}, language={en} }
 
  @article{Granlund_1978, title={In Search of a General Picture Processing Operator}, volume={8}, ISSN={0146664X}, DOI={10.1016/0146-664X(78)90047-3}, number={2}, journal={Computer Graphics and Image Processing}, author={Granlund, Goesta H.}, year={1978}, month={Oct}, pages={155–173}, language={en} }
 
@@ -3435,3 +3435,63 @@
  @article{Feldman_2013, title={The Neural Binding Problem(s)}, volume={7}, ISSN={1871-4080, 1871-4099}, DOI={10.1007/s11571-012-9219-8}, number={1}, journal={Cognitive Neurodynamics}, author={Feldman, Jerome}, year={2013}, month={Feb}, pages={1–11}, language={en} }
 
  @article{Wiskott_Fellous_Kuiger_VonDerMalsburg_1997, title={Face Recognition by Elastic Bunch Graph Matching}, volume={19}, ISSN={0162-8828, 2160-9292}, DOI={10.1109/34.598235}, number={7}, journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, author={Wiskott, L. and Fellous, J.-M. and Kuiger, N. and Von Der Malsburg, C.}, year={1997}, month={Jul}, pages={775–779} }
+
+ @article{Olshausen_Field_1996, title={Emergence of Simple-Cell Receptive Field Properties by Learning a Sparse Code for Natural Images}, volume={381}, ISSN={0028-0836, 1476-4687}, DOI={10.1038/381607a0}, number={6583}, journal={Nature}, author={Olshausen, Bruno A. and Field, David J.}, year={1996}, month={Jun}, pages={607–609}, language={en} }
+
+ @article{Bao_She_McGill_Tsao_2020, title={A Map of Object Space in Primate Inferotemporal Cortex}, volume={583}, ISSN={0028-0836, 1476-4687}, DOI={10.1038/s41586-020-2350-5}, number={7814}, journal={Nature}, author={Bao, Pinglei and She, Liang and McGill, Mason and Tsao, Doris Y.}, year={2020}, month={Jul}, pages={103–108}, language={en} }
+
+ @article{Josselyn_Tonegawa_2020, title={Memory Engrams: Recalling the Past and Imagining the Future}, volume={367}, ISSN={0036-8075, 1095-9203}, DOI={10.1126/science.aaw4325}, number={6473}, journal={Science}, author={Josselyn, Sheena A. and Tonegawa, Susumu}, year={2020}, month={Jan}, pages={eaaw4325}, language={en} }
+ 
+ @article{Ma_Tsao_Shum_2022, title={On the Principles of Parsimony and Self-consistency for the Emergence of Intelligence}, volume={23}, ISSN={2095-9184, 2095-9230}, DOI={10.1631/FITEE.2200297}, number={9}, journal={Frontiers of Information Technology & Electronic Engineering}, author={Ma, Yi and Tsao, Doris and Shum, Heung-Yeung}, year={2022}, month={Sep}, pages={1298–1323}, language={en} }
+
+ @article{Touvron_Lavril_Izacard_Martinet_Lachaux_Lacroix_Rozière_Goyal_Hambro_Azhar, title={LLaMA: Open and Efficient Foundation Language Models}, url={http://arxiv.org/abs/2302.13971}, abstractNote={We introduce LLaMA, a collection of foundation language models ranging from 7B to 65B parameters. We train our models on trillions of tokens, and show that it is possible to train state-of-the-art models using publicly available datasets exclusively, without resorting to proprietary and inaccessible datasets. In particular, LLaMA-13B outperforms GPT-3 (175B) on most benchmarks, and LLaMA-65B is competitive with the best models, Chinchilla-70B and PaLM-540B. We release all our models to the research community.}, note={arXiv:2302.13971 [cs]}, number={arXiv:2302.13971}, publisher={arXiv}, author={Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timothée and Rozière, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and Rodriguez, Aurelien and Joulin, Armand and Grave, Edouard and Lample, Guillaume}, year={2023}, month={Feb} }
+
+ @article{Ouyang_Wu_Jiang_Almeida_Wainwright_Mishkin_Zhang_Agarwal_Slama_Ray, title={Training Language Models to Follow Instructions with Human Feedback}, url={http://arxiv.org/abs/2203.02155}, abstractNote={Making language models bigger does not inherently make them better at following a user’s intent. For example, large language models can generate outputs that are untruthful, toxic, or simply not helpful to the user. In other words, these models are not aligned with their users. In this paper, we show an avenue for aligning language models with user intent on a wide range of tasks by fine-tuning with human feedback. Starting with a set of labeler-written prompts and prompts submitted through the OpenAI API, we collect a dataset of labeler demonstrations of the desired model behavior, which we use to fine-tune GPT-3 using supervised learning. We then collect a dataset of rankings of model outputs, which we use to further fine-tune this supervised model using reinforcement learning from human feedback. We call the resulting models InstructGPT. In human evaluations on our prompt distribution, outputs from the 1.3B parameter InstructGPT model are preferred to outputs from the 175B GPT-3, despite having 100x fewer parameters. Moreover, InstructGPT models show improvements in truthfulness and reductions in toxic output generation while having minimal performance regressions on public NLP datasets. Even though InstructGPT still makes simple mistakes, our results show that fine-tuning with human feedback is a promising direction for aligning language models with human intent.}, note={arXiv:2203.02155 [cs]}, number={arXiv:2203.02155}, publisher={arXiv}, author={Ouyang, Long and Wu, Jeff and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll L. and Mishkin, Pamela and Zhang, Chong and Agarwal, Sandhini and Slama, Katarina and Ray, Alex and Schulman, John and Hilton, Jacob and Kelton, Fraser and Miller, Luke and Simens, Maddie and Askell, Amanda and Welinder, Peter and Christiano, Paul and Leike, Jan and Lowe, Ryan}, year={2022}, month={Mar} }
+
+ @article{Feldman_Foulds_Pan_2023, title={Trapping LLM Hallucinations Using Tagged Context Prompts}, url={http://arxiv.org/abs/2306.06085}, abstractNote={Recent advances in large language models (LLMs), such as ChatGPT, have led to highly sophisticated conversation agents. However, these models suffer from “hallucinations,” where the model generates false or fabricated information. Addressing this challenge is crucial, particularly with AI-driven platforms being adopted across various sectors. In this paper, we propose a novel method to recognize and flag instances when LLMs perform outside their domain knowledge, and ensuring users receive accurate information. We find that the use of context combined with embedded tags can successfully combat hallucinations within generative language models. To do this, we baseline hallucination frequency in no-context prompt-response pairs using generated URLs as easily-tested indicators of fabricated data. We observed a significant reduction in overall hallucination when context was supplied along with question prompts for tested generative engines. Lastly, we evaluated how placing tags within contexts impacted model responses and were able to eliminate hallucinations in responses with 98.88% effectiveness.}, note={arXiv:2306.06085 [cs]}, number={arXiv:2306.06085}, publisher={arXiv}, author={Feldman, Philip and Foulds, James R. and Pan, Shimei}, year={2023}, month={Jun} }
+
+ @article{Manakul_Liusie_Gales_2023, title={SelfCheckGPT: Zero-Resource Black-Box Hallucination Detection for Generative Large Language Models}, url={http://arxiv.org/abs/2303.08896}, abstractNote={Generative Large Language Models (LLMs) such as GPT-3 are capable of generating highly fluent responses to a wide variety of user prompts. However, LLMs are known to hallucinate facts and make non-factual statements which can undermine trust in their output. Existing fact-checking approaches either require access to the output probability distribution (which may not be available for systems such as ChatGPT) or external databases that are interfaced via separate, often complex, modules. In this work, we propose “SelfCheckGPT”, a simple sampling-based approach that can be used to fact-check black-box models in a zero-resource fashion, i.e. without an external database. SelfCheckGPT leverages the simple idea that if a LLM has knowledge of a given concept, sampled responses are likely to be similar and contain consistent facts. However, for hallucinated facts, stochastically sampled responses are likely to diverge and contradict one another. We investigate this approach by using GPT-3 to generate passages about individuals from the WikiBio dataset, and manually annotate the factuality of the generated passages. We demonstrate that SelfCheckGPT can: i) detect non-factual and factual sentences; and ii) rank passages in terms of factuality. We compare our approach to several baselines and show that in sentence hallucination detection, our approach has AUC-PR scores comparable to or better than grey-box methods, while SelfCheckGPT is best at passage factuality assessment.}, note={arXiv:2303.08896 [cs]}, number={arXiv:2303.08896}, publisher={arXiv}, author={Manakul, Potsawee and Liusie, Adian and Gales, Mark J. F.}, year={2023}, month={May} }
+
+ @article{Hoi_Sahoo_Lu_Zhao_2021, title={Online learning: A Comprehensive Survey}, volume={459}, ISSN={09252312}, DOI={10.1016/j.neucom.2021.04.112}, journal={Neurocomputing}, author={Hoi, Steven C.H. and Sahoo, Doyen and Lu, Jing and Zhao, Peilin}, year={2021}, month={Oct}, pages={249–289}, language={en} }
+
+ @article{Zhuang_Qi_Duan_Xi_Zhu_Zhu_Xiong_He_2021, title={A Comprehensive Survey on Transfer Learning}, volume={109}, ISSN={0018-9219, 1558-2256}, DOI={10.1109/JPROC.2020.3004555}, number={1}, journal={Proceedings of the IEEE}, author={Zhuang, Fuzhen and Qi, Zhiyuan and Duan, Keyu and Xi, Dongbo and Zhu, Yongchun and Zhu, Hengshu and Xiong, Hui and He, Qing}, year={2021}, month={Jan}, pages={43–76} }
+
+ @article{Richards_Lillicrap_Beaudoin_Bengio_Bogacz_Christensen_Clopath_Costa_De, title={A Deep Learning Framework for Neuroscience}, volume={22}, ISSN={1097-6256, 1546-1726}, DOI={10.1038/s41593-019-0520-2}, number={11}, journal={Nature Neuroscience}, author={Richards, Blake A. and Lillicrap, Timothy P. and Beaudoin, Philippe and Bengio, Yoshua and Bogacz, Rafal and Christensen, Amelia and Clopath, Claudia and Costa, Rui Ponte and De Berker, Archy and Ganguli, Surya and Gillon, Colleen J. and Hafner, Danijar and Kepecs, Adam and Kriegeskorte, Nikolaus and Latham, Peter and Lindsay, Grace W. and Miller, Kenneth D. and Naud, Richard and Pack, Christopher C. and Poirazi, Panayiota and Roelfsema, Pieter and Sacramento, João and Saxe, Andrew and Scellier, Benjamin and Schapiro, Anna C. and Senn, Walter and Wayne, Greg and Yamins, Daniel and Zenke, Friedemann and Zylberberg, Joel and Therien, Denis and Kording, Konrad P.}, year={2019}, month={Nov}, pages={1761–1770}, language={en} }
+
+ @article{Hawkins_Lewis_Klukas_Purdy_Ahmad_2019, title={A Framework for Intelligence and Cortical Function Based on Grid Cells in the Neocortex}, volume={12}, ISSN={1662-5110}, DOI={10.3389/fncir.2018.00121}, journal={Frontiers in Neural Circuits}, author={Hawkins, Jeff and Lewis, Marcus and Klukas, Mirko and Purdy, Scott and Ahmad, Subutai}, year={2019}, month={Jan}, pages={121} }
+
+ @inbook{Mountcastle_1978, address={Cambridge, MA}, title={An Organizing Principle for Cerebral Function: The Unit Model and the Distributed System}, booktitle={The Mindful Brain}, publisher={MIT Press}, author={Mountcastle, Vernon}, year={1978}, pages={7–50}, language={en} }
+
+ @article{Mountcastle_1997, title={The Columnar Organization of the Neocortex}, volume={120}, ISSN={14602156}, DOI={10.1093/brain/120.4.701}, number={4}, journal={Brain}, author={Mountcastle, Vernon}, year={1997}, month={Apr}, pages={701–722} }
+
+ @article{Lewis_Purdy_Ahmad_Hawkins_2019, title={Locations in the Neocortex: A Theory of Sensorimotor Object Recognition Using Cortical Grid Cells}, volume={13}, ISSN={1662-5110}, DOI={10.3389/fncir.2019.00022}, journal={Frontiers in Neural Circuits}, author={Lewis, Marcus and Purdy, Scott and Ahmad, Subutai and Hawkins, Jeff}, year={2019}, month={Apr}, pages={22} }
+
+ @inproceedings{TinKamHo_1995, address={Montreal, Que., Canada}, title={Random Decision Forests}, volume={1}, ISBN={978-0-8186-7128-9}, url={http://ieeexplore.ieee.org/document/598994/}, DOI={10.1109/ICDAR.1995.598994}, booktitle={Proceedings of 3rd International Conference on Document Analysis and Recognition}, publisher={IEEE Comput. Soc. Press}, author={Tin Kam Ho}, year={1995}, pages={278–282} }
+
+ @article{Yang_Lv_Chen_2023, title={A Survey on Ensemble Learning Under the Era of Deep Learning}, volume={56}, ISSN={0269-2821, 1573-7462}, DOI={10.1007/s10462-022-10283-5}, number={6}, journal={Artificial Intelligence Review}, author={Yang, Yongquan and Lv, Haijun and Chen, Ning}, year={2023}, month={Jun}, pages={5545–5589}, language={en} }
+
+ @article{Ferrier_2014, title={Toward a Universal Cortical Algorithm: Examining Hierarchical Temporal Memory in Light of Frontal Cortical Function}, url={http://arxiv.org/abs/1411.4702}, abstractNote={A wide range of evidence points toward the existence of a common algorithm underlying the processing of information throughout the cerebral cortex. Several hypothesized features of this cortical algorithm are reviewed, including sparse distributed representation, Bayesian inference, hierarchical organization composed of alternating template matching and pooling layers, temporal slowness and predictive coding. Hierarchical Temporal Memory (HTM) is a family of learning algorithms and corresponding theories of cortical function that embodies these principles. HTM has previously been applied mainly to perceptual tasks typical of posterior cortex. In order to evaluate HTM as a candidate model of cortical function, it is necessary also to investigate its compatibility with the requirements of frontal cortical function. To this end, a variety of models of frontal cortical function are reviewed and integrated, to arrive at the hypothesis that frontal functions including attention, working memory and action selection depend largely upon the same basic algorithms as do posterior functions, with the notable additions of a mechanism for the active maintenance of representations and of multiple cortico-striato-thalamo-cortical loops that allow communication between regions of frontal cortex to be gated in an adaptive manner. Computational models of this system are reviewed. Finally, there is a discussion of how HTM can contribute to the understanding of frontal cortical function, and of what the requirements of frontal cortical function mean for the future development of HTM.}, note={arXiv:1411.4702 [cs, q-bio]}, number={arXiv:1411.4702}, publisher={arXiv}, author={Ferrier, Michael R.}, year={2014}, month={Nov} }
+
+ @article{George_Lehrach_Kansky_Gredilla_Laan_Marthi_Lou_Meng_Liu_Wang_etal, title={A Generative Vision Model that Trains with High Data Efficiency and Breaks Text-Based CAPTCHAs}, volume={358}, ISSN={0036-8075, 1095-9203}, DOI={10.1126/science.aag2612}, number={6368}, journal={Science}, author={George, Dileep and Lehrach, Wolfgang and Kansky, Ken and Lázaro-Gredilla, Miguel and Laan, Christopher and Marthi, Bhaskara and Lou, Xinghua and Meng, Zhaoshi and Liu, Yi and Wang, Huayan and Lavin, Alex and Phoenix, D. Scott}, year={2017}, month={Dec}, pages={eaag2612}, language={en} }
+
+@inproceedings{10.5555/3294996.3295142, author = {Sabour, Sara and Frosst, Nicholas and Hinton, Geoffrey E.}, title = {Dynamic Routing between Capsules}, year = {2017}, isbn = {9781510860964}, publisher = {Curran Associates Inc.}, address = {Red Hook, NY, USA}, abstract = {A capsule is a group of neurons whose activity vector represents the instantiation parameters of a specific type of entity such as an object or an object part. We use the length of the activity vector to represent the probability that the entity exists and its orientation to represent the instantiation parameters. Active capsules at one level make predictions, via transformation matrices, for the instantiation parameters of higher-level capsules. When multiple predictions agree, a higher level capsule becomes active. We show that a discrimininatively trained, multi-layer capsule system achieves state-of-the-art performance on MNIST and is considerably better than a convolutional net at recognizing highly overlapping digits. To achieve these results we use an iterative routing-by-agreement mechanism: A lower-level capsule prefers to send its output to higher level capsules whose activity vectors have a big scalar product with the prediction coming from the lower-level capsule.}, booktitle = {Proceedings of the 31st International Conference on Neural Information Processing Systems}, pages = {3859–3869}, numpages = {11}, location = {Long Beach, California, USA}, series = {NIPS'17} }
+
+ @book{Parr_Pezzulo_Friston_2022, title={Active Inference: The Free Energy Principle in Mind, Brain, and Behavior}, ISBN={978-0-262-36997-8}, url={https://direct.mit.edu/books/book/5299/Active-InferenceThe-Free-Energy-Principle-in-Mind}, DOI={10.7551/mitpress/12441.001.0001}, abstractNote={The first comprehensive treatment of active inference, an integrative perspective on brain, cognition, and behavior used across multiple disciplines.
+            Active inference is a way of understanding sentient behavior—a theory that characterizes perception, planning, and action in terms of probabilistic inference. Developed by theoretical neuroscientist Karl Friston over years of groundbreaking research, active inference provides an integrated perspective on brain, cognition, and behavior that is increasingly used across multiple disciplines including neuroscience, psychology, and philosophy. Active inference puts the action into perception. This book offers the first comprehensive treatment of active inference, covering theory, applications, and cognitive domains.
+            Active inference is a “first principles” approach to understanding behavior and the brain, framed in terms of a single imperative to minimize free energy. The book emphasizes the implications of the free energy principle for understanding how the brain works. It first introduces active inference both conceptually and formally, contextualizing it within current theories of cognition. It then provides specific examples of computational models that use active inference to explain such cognitive phenomena as perception, attention, memory, and planning.}, publisher={The MIT Press}, author={Parr, Thomas and Pezzulo, Giovanni and Friston, Karl J.}, year={2022}, month={Mar}, language={en} }
+
+ @article{Friston_FitzGerald_Rigoli_Schwartenbeck_ODoherty_Pezzulo_2016, title={Active inference and learning}, volume={68}, ISSN={01497634}, DOI={10.1016/j.neubiorev.2016.06.022}, journal={Neuroscience & Biobehavioral Reviews}, author={Friston, Karl and FitzGerald, Thomas and Rigoli, Francesco and Schwartenbeck, Philipp and O'Doherty, John and Pezzulo, Giovanni}, year={2016}, month={Sep}, pages={862–879}, language={en} }
+
+@inproceedings{NEURIPS2021_e614f646,
+ author = {Bengio, Emmanuel and Jain, Moksh and Korablyov, Maksym and Precup, Doina and Bengio, Yoshua},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {M. Ranzato and A. Beygelzimer and Y. Dauphin and P.S. Liang and J. Wortman Vaughan},
+ pages = {27381--27394},
+ publisher = {Curran Associates, Inc.},
+ title = {Flow Network based Generative Models for Non-Iterative Diverse Candidate Generation},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2021/file/e614f646836aaed9f89ce58e837e2310-Paper.pdf},
+ volume = {34},
+ year = {2021}
+}
+
+ @article{Bengio_Lahlou_Deleu_Hu_Tiwari_Bengio_2022, title={GFlowNet Foundations}, url={http://arxiv.org/abs/2111.09266}, abstractNote={Generative Flow Networks (GFlowNets) have been introduced as a method to sample a diverse set of candidates in an active learning context, with a training objective that makes them approximately sample in proportion to a given reward function. In this paper, we show a number of additional theoretical properties of GFlowNets. They can be used to estimate joint probability distributions and the corresponding marginal distributions where some variables are unspecified and, of particular interest, can represent distributions over composite objects like sets and graphs. GFlowNets amortize the work typically done by computationally expensive MCMC methods in a single but trained generative pass. They could also be used to estimate partition functions and free energies, conditional probabilities of supersets (supergraphs) given a subset (subgraph), as well as marginal distributions over all supersets (supergraphs) of a given set (graph). We introduce variations enabling the estimation of entropy and mutual information, sampling from a Pareto frontier, connections to reward-maximizing policies, and extensions to stochastic environments, continuous actions and modular energy functions.}, note={arXiv:2111.09266 [cs, stat]}, number={arXiv:2111.09266}, publisher={arXiv}, author={Bengio, Yoshua and Lahlou, Salem and Deleu, Tristan and Hu, Edward J. and Tiwari, Mo and Bengio, Emmanuel}, year={2022}, month={Aug} }
