--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -1,4 +1,5 @@
 %% intro.tex
+TODO: Umschreiben: Während Thesis ChatGPT -> Durchbruch da gut Anwendbar in Praxis, jedoch keine wirkliche Intelligenz. Vieles fehlt für Intelligenz. 
 Humanity has always tried to simplify its life through technological progress.
 For example, the computer has influenced and changed every field imaginable in the last decades. 
 In fact, it has been so successful that it has spawned its own scientific discipline, computer science.
@@ -86,7 +87,7 @@ Some concepts of CapsNets are closely related to those of RCNs. However, CapsNet
 
 The proposed framework unifies many promising concepts within an easily implementable computational framework. Self-consistency allows to measure the discrepancy in the latent space instead of the data space. Thus, the model only has to retain relevant information and can get rid of unnecessary details while still fulfilling the principle of parsimony. Leveraging these principles seems helpful, and storing latent representations in the most compact and structured way certainly makes sense by using sparse coding. However, it is unclear how to implement this in a way that scales to large datasets. 
 
-\paragraph{Actionable Representations.} Another frequently used principle inspired by biological learning is the combination of representations with actions. For example, it is known from animal research that both eye movements and behavioural states influence the reactions of neurons in the visual cortex {Keller_Bonhoeffer_Hübener_2012}.
+\paragraph{Actionable Representations.} Another frequently used principle inspired by biological learning is the combination of representations with actions. For example, it is known from animal research that both eye movements and behavioural states influence the reactions of neurons in the visual cortex \sidecite{Keller_Bonhoeffer_Hübener_2012}.
 Thus, animals integrate their actions (i.e., movements) with currently incoming sensory signals.
 Keurti et al. \sidecite{Keurti_Pan_Besserve_Grewe_Schölkopf_2022} argue that efference copies\sidenote{the internal copy of an outgoing motion-generating signal} help to learn useful latent representations of input perceived by the visual system. They allow an agent to perform actions by transforming objects and ensure that real-world transformations can also be applied to latent representations, i.e., mental objects and real-world objects remain consistent when similar transformations are applied.
 Allowing an agent to interact with the world to understand it better and create better representations seems essential not only from a neuroscientific point of view but is also in line with theories from psychology:
@@ -503,7 +504,12 @@ The core idea is to build subnetworks in L1 and to map them to
 - position invariance L2
 - unbalanced data (i.e. some patterns dominate L1) -> probabilistic neuron is not enough -> requires competition to learn
 - Mehrere parallele identische Zellen nötig, damit sich verschiedene Feature-Kombinationen ausbilden können (z.B. Feature 1+2 ohne 3 aber auch Feature 1+3)
-- Hemmung noch nicht umgestzt
+
+
+TODO
+- Neue Normalisierung beschreiben
+- Hemmung beschreiben
+- Beschreiben, dass alternative Zellen nötig sind für verschiedene Muster -> Symmetrieproblem -> Benötigt eine Art Competition -> Evtl. können sich Zellen bei zu viel Aktivität sogar selbstständig verdoppeln
 
 
 
