--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 
 \usepackage{styles/phdbibliobyphd}
 \addbibresource{main.bib}
+\addbibresource{zotero.bib}
 
 \graphicspath{{imgs/}{./}}
 \newcommand\home{./}  % for path adjustments 
@@ -64,9 +65,7 @@
 \titlehead{Master of Science in Engineering with Specialisation in Data Science}
 
 \subject{Master Thesis}
-\title[Deep Learning-based Pattern Recognition and the Principle of Self-Organisation]{
-    Deep Learning-based Pattern Recognition and the Principle of Self-Organisation
-}
+\title[Self-Organization in a Biologically Inspired Alternative Learning Paradigm with Probabilistic Neurons]{Self-Organization in a Biologically Inspired Alternative Learning Paradigm with Probabilistic Neurons}
 \subtitle{Incorporating Findings from Neuroscience about Natural Intelligence into Modern Deep Learning Architectures}
 
 \author[Pascal Sager]{{\small written by}\\Pascal Sager\\[1ex]  {\small supervised by}\\{\large Prof. Dr. Thilo Stadelmann}\\{\large Dr. Jan Milan Deriu}\\{\large Prof. Dr. Christoph von der Malsburg}\\[4ex]}
